finalize formatting of lab1 template rmd and post

--- a/Labs/lab1/lab1.html
+++ b/Labs/lab1/lab1.html
@@ -92,6 +92,7 @@ img {
 <div id="header">
 <h1 class="title">Lab 1 - Intro to R and RStudio</h1>
 <h4 class="author"><em>Team name</em></h4>
+<h4 class="date"><em>Date of lab session</em></h4>
 </div>
 
 
@@ -142,7 +143,11 @@ arbuthnot$girls</code></pre></div>
 </div>
 <div id="teamwork-report" class="section level2">
 <h2>Teamwork report</h2>
-<p>For each team member, write their name, whether they attended the lab session, whether they were the author for this week, and their contribution to the lab report (as a percentage). The percentages should add up to 100.</p>
+<!--
+For each team member, write their name, whether they attended the lab session, 
+whether they were the author for this week, and their contribution to the lab 
+report (as a percentage). The percentages should add up to 100.
+-->
 <table>
 <thead>
 <tr class="header">
