--- a/Project/project_proposal_rubric.html
+++ b/Project/project_proposal_rubric.html
@@ -56,7 +56,7 @@ img {
 <h4>1. Data (2 points)</h4>
 <ul>
 <li><p>1 pt for correct reasoning for generabizability – Answer should be yes due to random sampling, students might discuss any reservations, those should be well justified</p></li>
-<li><p>1 pt for correct reasoning for causality – Answer should be yes due to no random assignment</p></li>
+<li><p>1 pt for correct reasoning for causality – Answer should be no due to no random assignment</p></li>
 </ul>
 </div>
 <div id="research-questions-6-points" class="section level4">
