update link to dl Rmd file + number of questions on template

--- a/Labs/lab10/lab10.html
+++ b/Labs/lab10/lab10.html
@@ -129,25 +129,40 @@ img {
 </div>
 <div id="exercise-8" class="section level4">
 <h4>Exercise 8:</h4>
+</div>
+<div id="exercise-9" class="section level4">
+<h4>Exercise 9:</h4>
+</div>
+<div id="exercise-10" class="section level4">
+<h4>Exercise 10:</h4>
+</div>
+<div id="exercise-11" class="section level4">
+<h4>Exercise 11:</h4>
+</div>
+<div id="exercise-12" class="section level4">
+<h4>Exercise 12:</h4>
+</div>
+<div id="exercise-13" class="section level4">
+<h4>Exercise 13:</h4>
+</div>
+<div id="exercise-14" class="section level4">
+<h4>Exercise 14:</h4>
+</div>
+<div id="exercise-15" class="section level4">
+<h4>Exercise 15:</h4>
+</div>
+<div id="exercise-16" class="section level4">
+<h4>Exercise 16:</h4>
+</div>
+<div id="exercise-17" class="section level4">
+<h4>Exercise 17:</h4>
+</div>
+<div id="exercise-18" class="section level4">
+<h4>Exercise 18:</h4>
+</div>
+<div id="exercise-19" class="section level4">
+<h4>Exercise 19:</h4>
 <hr />
-</div>
-</div>
-<div id="on-your-own" class="section level2">
-<h2>On your own:</h2>
-<div id="section" class="section level4">
-<h4>1:</h4>
-</div>
-<div id="section-1" class="section level4">
-<h4>2:</h4>
-</div>
-<div id="section-2" class="section level4">
-<h4>3:</h4>
-</div>
-<div id="section-3" class="section level4">
-<h4>4:</h4>
-</div>
-<div id="section-4" class="section level4">
-<h4>5:</h4>
 </div>
 </div>
 <div id="teamwork-report" class="section level2">
